--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
-.gemTable th, .gemTable td{text-align: center;}
+.title a {color: #000;}
+.title a:hover {color: #000;}
+.gem-cell-content {text-align: center; border: 1px solid #000; padding: 5px; min-height: 145px;}
+.build-gem-link-container {padding-left: 20px;}
+.clear-input {margin-left: 20px;}
+
+.loading-icon{-webkit-animation: spin 1s infinite linear;}
+
+@-webkit-keyframes spin {
+    0%   {-webkit-transform: rotate(0deg)}
+    100% {-webkit-transform: rotate(360deg)}
+}
