--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,89 @@
-body {color: #a38d6d;}
-body > .container {margin-top: 10px;}
-strong { color: #bb9e74; font-weight: bold;}
-.gem-cell-content .item-complete{position: absolute; top: 3px; left: 7px;}
-.gem-cell-content.disabled, .gem-cell-content.disabled a {color: #999999; background-color: #464545;}
-.gem-cell-content.disabled a {pointer-events: none;}
-.gemTable .row, .notAvailableGemTable .row {margin-bottom: 10px;}
-.gem-cell-content {position: relative; text-align: center; border: 1px solid #000; padding: 5px; min-height: 145px;}
-.clear-input {margin-left: 20px;}
-.loading-container .center-block {width: 18px;}
-.loading-icon{-webkit-animation: spin 1s infinite linear;}
-.build-gem-link-container .buildGemLink{ margin-top: 12px; margin-bottom: 0px; overflow-wrap: break-word;}
-a {color: #A38B63; text-decoration: underline;}
-a:hover {color: #A38B63;}
-
-.nothing-found-row .icon-container{width: 100px; text-align: center;}
-.nothing-found-row .icon-container .fa{font-size: 100px;}
-
-@-webkit-keyframes spin {
-    0%   {-webkit-transform: rotate(0deg)}
-    100% {-webkit-transform: rotate(360deg)}
+html,
+body {
+    height: 100%;
 }
-
+body {
+    color: #a38d6d;
+}
+strong {
+    color: #bb9e74;
+    font-weight: bold;
+}
+.gem-cell-content .item-complete {
+    position: absolute;
+    top: 3px;
+    left: 7px;
+}
+.gem-cell-content.disabled,
+.gem-cell-content.disabled a {
+    color: #999999;
+    background-color: #464545;
+}
+.gem-cell-content.disabled a {
+    pointer-events: none;
+}
+.gemTable .row,
+.notAvailableGemTable .row {
+    margin-bottom: 10px;
+}
+.gem-cell-content {
+    position: relative;
+    text-align: center;
+    border: 1px solid #000;
+    padding: 5px;
+    min-height: 145px;
+}
+.clear-input {
+    margin-left: 20px;
+}
+.loading-container .center-block {
+    width: 18px;
+}
+.loading-icon {
+    -webkit-animation: spin 1s infinite linear;
+}
+.build-gem-link-container .buildGemLink {
+    margin-top: 12px;
+    margin-bottom: 0px;
+    overflow-wrap: break-word;
+}
+a {
+    color: #A38B63;
+    text-decoration: underline;
+}
+a:hover {
+    color: #A38B63;
+}
+.nothing-found-row .icon-container {
+    width: 100px;
+    text-align: center;
+}
+.nothing-found-row .icon-container .fa {
+    font-size: 100px;
+}
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg)
+    }
+    100% {
+        -webkit-transform: rotate(360deg)
+    }
+}
+main.container {
+    min-height: 100%;
+    height: auto;
+    margin: 0 auto -30px;
+    padding: 0 0 20px;
+}
+main.container .main-form-container {
+    margin-top: 20px;
+}
+.footer {
+    height: 20px;
+}
+.footer p {
+    text-align: center;
+}
+.footer p.text-muted, .footer p.text-muted a, .footer p.text-muted:hover {
+    color: #3E382F;
+}
