--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ strong {
 .gem-cell-content.disabled a {
     pointer-events: none;
 }
+.notAvailableGemTable {
+    padding-top: 10px;
+}
 .notAvailableGemTable .row {
     margin-bottom: 10px;
 }
@@ -114,47 +117,47 @@ main.container .main-form-container {
 .footer .text-muted, .footer .text-muted a, .footer .text-muted:hover {
     color: #3E382F;
 }
-.foundGemsContainer .gems-table-container {
+.gems-table-container {
     text-align: center;
     vertical-align: middle;
 }
-.foundGemsContainer .gems-table-container .header-row{
+.gems-table-container .header-row{
     border-bottom: 1px solid #4C453A;
     padding-bottom: 5px;
 }
-.foundGemsContainer .gems-table-container .header-row .gem-icon-col{
+.gems-table-container .header-row .gem-icon-col{
     display: block;
 }
-.foundGemsContainer .gems-table-container .header-row .gem-icon-col #gem-icon-col{
+.gems-table-container .header-row .gem-icon-col #gem-icon-col{
     margin-left: 5px;
 }
-.foundGemsContainer .gems-table-container .content-row {
+.gems-table-container .content-row {
     padding-top: 10px;
 }
-.foundGemsContainer .gems-table-container .content-row .skill-gem {
+.gems-table-container .content-row .skill-gem {
     cursor: pointer;
     line-height: 25px;
 }
-.foundGemsContainer .gems-table-container .content-row .iconImageLink img{
+.gems-table-container .content-row .iconImageLink img{
     width: 30px;
 }
-.foundGemsContainer .gems-table-container .content-row .skill-gem.disabled{
+.gems-table-container .content-row .skill-gem.disabled{
     color: #999999;
     background-color: #464545;
     text-decoration: line-through;
 }
-.foundGemsContainer .gems-table-container .content-row .centered-col-content {
+.gems-table-container .content-row .centered-col-content {
     -webkit-align-items: center;
     align-items: center;
     -webkit-justify-content: center;
     justify-content: center;
 }
 
-.foundGemsContainer .gems-table-container .content-row:nth-child(odd) {
+.gems-table-container .content-row:nth-child(odd) {
     background-color: #282828;
 }
 
-.foundGemsContainer .gems-table-container .content-row div{
+.gems-table-container .content-row div{
     margin-bottom: 5px;
     line-height: 25px;
 }
